--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     
                 </div>
                 <div class="form-submit-btn">
-                    <button type="submit">
+                    <button type="submit" onClick="alert('Su mensaje fue enviado con exito!')">
                         ENVIAR MENSAJE
                     </button>
                 </div>
